<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Welcome to ALC 4.0</string>
    <string name="title_activity_alcweb">About ALC</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="my_name">Samson Westcott</string>
    <string name="track_text">Track:   Android</string>
    <string name="country_text">Country:   Nigeria</string>
    <string name="email_text">Email:   westcott2real@gmail.com</string>
    <string name="phone_text">Phone number:   +2348063080675</string>
    <string name="slack_text">Slack Username:   @Samson Westcott</string>
</resources>
