<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyProfile"
    tools:showIn="@layout/activity_my_profile">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="659dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pic_holder"
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:contentDescription="@string/title_activity_my_profile" />


        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/contrail_one"
            android:text="@string/my_name"
            android:textAlignment="center"
            android:textSize="28sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/track_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/contrail_one"
            android:padding="10dp"
            android:text="@string/track_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/country_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/contrail_one"
            android:padding="10dp"
            android:text="@string/country_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/contrail_one"
            android:padding="10dp"
            android:text="@string/email_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/contrail_one"
            android:padding="10dp"
            android:text="@string/phone_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/slack_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/contrail_one"
            android:padding="10dp"
            android:text="@string/slack_text"
            android:textSize="25sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>