<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about_alc"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="110dp"
        android:background="@color/orange"
        android:fontFamily="@font/contrail_one"
        android:text="@string/title_activity_alcweb"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/my_profile"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@color/orange"
        android:fontFamily="@font/contrail_one"
        android:text="@string/title_activity_my_profile"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/about_alc"
        app:layout_constraintStart_toStartOf="@+id/about_alc"
        app:layout_constraintTop_toBottomOf="@+id/about_alc" />

</android.support.constraint.ConstraintLayout>